Fixed scroll issue on mobile

--- a/styles/pages/index.css
+++ b/styles/pages/index.css
@@ -1,5 +1,11 @@
+html,
 body {
     overflow: hidden;
+    height: 100%;
+    width: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
 }
 
 #rotating {
@@ -22,24 +28,26 @@ body {
     left: 0;
     width: 100vw;
     height: 100vh;
+    overflow: hidden;
 }
 
 #blue-overlay {
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     background: rgb(0, 0, 255);
     mix-blend-mode: color-burn;
+    overflow: hidden;
 }
 
 #black-overlay {
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     background: radial-gradient(ellipse, rgb(0, 0, 0) 10%, rgba(0, 0, 255, 0) 90%);
 }
 
@@ -47,8 +55,8 @@ body {
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
